# kszx_sch

./: .readthedocs.yml  MANIFEST.in  README.md  README.txt  environment.yml  global_params_North_dr5_explorealpha_bg2p2_boxpad_3K_lmin2K_lmax9K.py  pyproject.toml  setup.py
cpp/: cic.cpp  cpp_kernels.cpp  cpp_kernels.hpp  cubic.cpp  estimate_power_spectrum.cpp  interpolation_args.hpp  kbin_average.cpp
doc/: environment_rtd.yml  requirements_rtd.txt
doc/source/: boundingbox.rst  box.rst  conf.py  desils_lrg.rst  fft.rst  index.rst  manipulating_maps.rst  misc_utils.rst
docs/: README.md  environment_rtd.yml
docs/source/: act.rst  catalog.rst  catalog_gridder.rst  catalog_pse.rst  cmb_cl_fitter.rst  conf.py  cosmology.rst  desi.rst  desils_lrg.rst  fft.rst  healpix_utils.rst  index.rst  install.rst  interpolation.rst  intro.rst  ksz_desils.rst  ksz_pse.rst  kszpipe.rst  manipulating_maps.rst  misc_utils.rst  pgv_likelihood.rst  pixell_utils.rst  planck.rst  plot.rst  regulated_deconvolver.rst  sdss.rst  surrogate_factory.rst  wfunc_utils.rst
kszx/: BoundingBox.py  Box.py  Catalog.py  CatalogGridder.py  CatalogPSE.py  CmbClFitter.py  Cosmology.py  KszPSE.py  KszPipe.py  PgvLikelihood.py  RegulatedDeconvolver.py  SurrogateFactory.py  __init__.py  __main__.py  act.py  cmb.py  core.py  desi.py  desils.py  desils_lrg.py  desils_main.py  healpix_utils.py  io_utils.py  ksz_desils.py  lss.py  pixell_utils.py  planck.py  plot.py  sdss.py  utils.py  wfunc_utils.py
kszx/numba/: Cosmology.py  core.py  (+1 more)
scripts/: .gitignore  hmvec_compare.py  pixellize_planck_mask.py
(+18 files in other folders)
